; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_chacha20poly1305.c_chachapoly_exit.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_chacha20poly1305.c_chachapoly_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_aead = type { i32 }
%struct.chachapoly_ctx = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_aead*)* @chachapoly_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chachapoly_exit(%struct.crypto_aead* %0) #0 {
  %2 = alloca %struct.crypto_aead*, align 8
  %3 = alloca %struct.chachapoly_ctx*, align 8
  store %struct.crypto_aead* %0, %struct.crypto_aead** %2, align 8
  %4 = load %struct.crypto_aead*, %struct.crypto_aead** %2, align 8
  %5 = call %struct.chachapoly_ctx* @crypto_aead_ctx(%struct.crypto_aead* %4)
  store %struct.chachapoly_ctx* %5, %struct.chachapoly_ctx** %3, align 8
  %6 = load %struct.chachapoly_ctx*, %struct.chachapoly_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.chachapoly_ctx, %struct.chachapoly_ctx* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @crypto_free_ahash(i32 %8)
  %10 = load %struct.chachapoly_ctx*, %struct.chachapoly_ctx** %3, align 8
  %11 = getelementptr inbounds %struct.chachapoly_ctx, %struct.chachapoly_ctx* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @crypto_free_skcipher(i32 %12)
  ret void
}

declare dso_local %struct.chachapoly_ctx* @crypto_aead_ctx(%struct.crypto_aead*) #1

declare dso_local i32 @crypto_free_ahash(i32) #1

declare dso_local i32 @crypto_free_skcipher(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
